--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": "off",
-    "next/next/no-page-custom-font": "off"
-  }
+  "extends": ["next/core-web-vitals", "next/typescript"]
 }
